# TNG033

Exercises/Set1/code/: CMakeLists.txt  exerc1.cpp  exerc2.cpp  exerc3.cpp  list.cpp  list.h  main.cpp
lab1/code/: set.cpp  set.hpp  test.cpp
lab2/code/: expression.cpp  expression.h  logarithm.cpp  logarithm.h  polynomial.cpp  polynomial.h  test.cpp
lab3/lab3/code/: exerc2.cpp  exerc3.cpp  exerc3_given.cpp  polynomial.cpp  polynomial.h  test.cpp
